--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <a href="8pt-grid/">8pt Grid Prototype</a>
-<a href="dashed-underlines/">Dashed Underlines/a>
+<a href="dashed-underlines/">Dashed Underlines</a>
