--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<a href="8pt-grid/">8pt Grid Prototype</a>
-<a href="dashed-underlines/">Dashed Underlines</a>
+<p><a href="8pt-grid/">8pt Grid Prototype</a></p>
+<p><a href="dashed-underlines/">Dashed Underlines</a></p>
+<p><a href="focus-states/">Focus States</a></p>
