Revised focus states inc tertiary (arrow link) buttons.

--- a/focus-states/index.html
+++ b/focus-states/index.html
@@ -6,32 +6,45 @@
 	<link rel="stylesheet" href="css/base.css">
 </head>
 <body>
+	
+	<p class="purple-20">
+		<a href="#">It's beginning to look a lot like Christmas!</a>
+		<button class="button button-color--primary">
+			Label
+		</button>
+		<a class="arrowlink" href="#">Label</a>
+	</p>
 
 	<p class="white">
 		<a href="#">It's beginning to look a lot like Christmas!</a>
 		<button class="button button-color--primary">
-			Button
+			Label
 		</button>
+		<a class="arrowlink" href="#">Label</a>
 	</p>
+
 	<p class="purple">
 		<a href="#">It's beginning to look a lot like Christmas!</a>
 		<button class="button button-color--normal">
-			Button
+			Label
 		</button>
+		<a class="arrowlink arrowlink-white" href="#">Label</a>
 	</p>
 
 	<p class="mint">
 		<a href="#">It's beginning to look a lot like Christmas!</a>
 		<button class="button button-color--normal">
-			Button
+			Label
 		</button>
+		<a class="arrowlink arrowlink-white" href="#">Label</a>
 	</p>
 
 	<p class="wavy">
 		<a href="#">It's beginning to look a lot like Christmas!</a>
 		<button class="button button-color--normal">
-			Button
+			Label
 		</button>
+		<a class="arrowlink arrowlink-white" href="#">Label</a>
 	</p>
 
 	
