Add secondary button

--- a/focus-states/index.html
+++ b/focus-states/index.html
@@ -28,6 +28,9 @@
 		<button class="button button-color--normal">
 			Label
 		</button>
+		<button class="button button-color--normal button-hollow">
+			Label
+		</button>
 		<a class="arrowlink arrowlink-white" href="#">Label</a>
 	</p>
 
