Alt button option

--- a/focus-states/index.html
+++ b/focus-states/index.html
@@ -9,9 +9,8 @@
 	
 	<p class="purple-20">
 		<a href="#">It's beginning to look a lot like Christmas!</a>
-		<button class="button button-color--primary">
-			Label
-		</button>
+		<button class="button button-color--primary">Label</button>
+		<button class="button button-color--primary-v2">Label</button>
 		<a class="arrowlink" href="#">Label</a>
 	</p>
 
