--- a/focus-states/index.html
+++ b/focus-states/index.html
@@ -24,12 +24,11 @@
 
 	<p class="purple">
 		<a href="#">It's beginning to look a lot like Christmas!</a>
-		<button class="button button-color--normal">
-			Label
-		</button>
-		<button class="button button-color--normal button-hollow">
-			Label
-		</button>
+		<button class="button button-color--normal">Label</button>
+		<button class="button button-color--normal-v2">Label</button>
+
+		<button class="button button-color--normal button-hollow">Label</button>
+
 		<a class="arrowlink arrowlink-white" href="#">Label</a>
 	</p>
 
@@ -38,6 +37,9 @@
 		<button class="button button-color--normal">
 			Label
 		</button>
+
+		<button class="button button-color--normal-v2">Label</button>
+
 		<a class="arrowlink arrowlink-white" href="#">Label</a>
 	</p>
 
@@ -46,6 +48,9 @@
 		<button class="button button-color--normal">
 			Label
 		</button>
+
+		<button class="button button-color--normal-v2">Label</button>
+
 		<a class="arrowlink arrowlink-white" href="#">Label</a>
 	</p>
 
