--- a/focus-states/index.html
+++ b/focus-states/index.html
@@ -11,6 +11,7 @@
 		<a href="#">It's beginning to look a lot like Christmas!</a>
 		<button class="button button-color--primary">Label</button>
 		<button class="button button-color--primary-v2">Label</button>
+		<button class="button button-color--primary-v2 button-hollow">Label</button>
 		<a class="arrowlink" href="#">Label</a>
 	</p>
 
