--- a/focus-states/index.html
+++ b/focus-states/index.html
@@ -9,9 +9,10 @@
 	
 	<p class="purple-20">
 		<a href="#">It's beginning to look a lot like Christmas!</a>
-		<button class="button button-color--primary">Label</button>
-		<button class="button button-color--primary-v2">Label</button>
-		<button class="button button-color--primary-v2 button-hollow">Label</button>
+		<button class="button button-color--primary">Button</button>
+		<button class="button button-color--primary-v2">Button v2</button>
+		<button class="button button-color--primary-v3">Button v3</button>
+		<button class="button button-color--primary-v2 button-hollow">Button v2</button>
 		<a class="arrowlink" href="#">Label</a>
 	</p>
 
