Add text field for easier tabbing

--- a/focus-states/index.html
+++ b/focus-states/index.html
@@ -9,6 +9,7 @@
 	
 	<p class="purple-20">
 		<a href="#">It's beginning to look a lot like Christmas!</a>
+		<input type="text">
 		<button class="button button-color--primary">Button</button>
 		<button class="button button-color--primary-v2">Button v2</button>
 		<button class="button button-color--primary-v3">Button v3</button>
