Quicksand weight test

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p><a href="8pt-grid/">8pt Grid Prototype</a></p>
 <p><a href="dashed-underlines/">Dashed Underlines</a></p>
 <p><a href="focus-states/">Focus States</a></p>
+<p><a href="quicksand-test/">Quicksand Weight Test</a></p>
