MS7 Dual Gradient Test

--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <p><a href="dashed-underlines/">Dashed Underlines</a></p>
 <p><a href="focus-states/">Focus States</a></p>
 <p><a href="quicksand-test/">Quicksand Weight Test</a></p>
+<p><a href="ms7-gradient/">MS7 Dual Gradient Test</a></p>
